# Corrected Welcome page spacing issue in IE6 with skip nav links
git-svn-id: https://svn.ircan.gc.ca/svn/theme-clf2-nsi2@48 27b413b2-b569-4c5a-91b7-c399223a659e

--- a/theme-clf2-nsi2/css/wp-pa-theme-clf2-nsi2-ie6.css
+++ b/theme-clf2-nsi2/css/wp-pa-theme-clf2-nsi2-ie6.css
@@ -5,6 +5,7 @@
  * Terms and conditions of use: http://tbs-sct.ircan.gc.ca/projects/gcwwwtemplates/wiki/Terms
  * Conditions régissant l'utilisation : http://tbs-sct.ircan.gc.ca/projects/gcwwwtemplates/wiki/Conditions
  */
+#cn-skip-head li {top: 0;}
 #cn-centre-col-inner h1, #cn-in-pd h3 {clip: rect(1px 1px 1px 1px);}
 #cn-centre-col-inner {display: inline-block;} 
 #cn-foot-inner {margin-top: -18px;}
